--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,24 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .headerLink {
+    @apply cursor-pointer transition duration-[.4s] hover:text-[#a7a9be];
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  .article {
+    @apply mx-auto mb-20 text-[#2e2f3e] max-w-3xl;
+  }
+
+  .title {
+    @apply text-black text-center text-3xl md:text-4xl font-extrabold;
+  }
+}
+
+.container {
+  min-height: 75vh;
+  position: relative;
 }
